<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <ImageView
        android:id="@+id/neighbour_avatar"
        android:layout_width="@dimen/match_parent"
        android:layout_height="@dimen/match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/first_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/return_arrow"
        android:layout_width="@dimen/image_margin"
        android:layout_height="@dimen/image_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_return_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_neighbour_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Caroline"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/first_guideline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_parent"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guideline">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/second_neighbour_name"
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:maxLines="1"
                android:text="@string/Caroline"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/firstview"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/second_neighbour_name" />

            <ImageView
                android:id="@+id/localisation_logo"
                android:layout_width="@dimen/image_margin"
                android:layout_height="@dimen/image_margin"
                android:src="@drawable/ic_localisation_point"
                app:layout_constraintBottom_toBottomOf="@+id/localisation"
                app:layout_constraintStart_toStartOf="@+id/second_neighbour_name"
                app:layout_constraintTop_toTopOf="@+id/localisation" />

            <TextView
                android:id="@+id/localisation"
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/extra_big_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:maxLines="1"
                android:text="@string/saint_pierre_du_mont_5_kms"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstview" />

            <ImageView
                android:id="@+id/phone_number_logo"
                android:layout_width="@dimen/image_margin"
                android:layout_height="@dimen/image_margin"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/phone_number"
                app:layout_constraintStart_toStartOf="@+id/localisation_logo"
                app:layout_constraintTop_toTopOf="@+id/phone_number"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/extra_big_margin"
                android:maxLines="1"
                android:text="@string/_33_6_86_57_90_14"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/website"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localisation" />

            <ImageView
                android:id="@+id/web_logo"
                android:layout_width="@dimen/image_margin"
                android:layout_height="@dimen/image_margin"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                app:layout_constraintBottom_toBottomOf="@+id/website"
                app:layout_constraintStart_toStartOf="@+id/phone_number_logo"
                app:layout_constraintTop_toTopOf="@+id/website"
                app:srcCompat="@drawable/ic_web_icon" />

            <TextView
                android:id="@+id/website"
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/extra_big_margin"
                android:layout_marginBottom="24dp"
                android:maxLines="1"
                android:text="@string/www_facebook_fr_caroline"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginRight="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description_title "
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:text="@string/a_propos_de_moi"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_title " />

            <TextView
                android:id="@+id/description_details"
                android:layout_width="@dimen/match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:text="@string/bonjour_je_souhaiterais_faire_de_la_marche_nordique_pas_initi_e_je_recherche_une_ou_plusieurs_personnes_susceptible_de_m_accompagner_j_aime_les_jeux_de_cartes_tels_la_belote_et_le_tarot"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/ic_star_border_white_24dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_star_white_24dp"
        android:visibility="visible"
        android:contentDescription="favorite button"
        app:layout_constraintBottom_toTopOf="@+id/first_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guideline"
        />


</android.support.constraint.ConstraintLayout>